# echoo

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
static/: index.html
static/css/: style.css
static/js/: app.js
